--- a/react-bootcamp/portfolio/package.json
+++ b/react-bootcamp/portfolio/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "history": "^5.3.0",
     "live-server": "^1.2.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "scripts": {
     "dev": "parcel src/index.html",
