--- a/proshop/package.json
+++ b/proshop/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
+    "express": "^4.17.3",
     "react-router-dom": "^5.3.0"
-  }
+  },
+  "name": "proshop",
+  "version": "1.0.0",
+  "description": "MERN shopping card app",
+  "main": "server.js",
+  "scripts": {
+    "start": "node backend/server"
+  },
+  "author": "Abhijeet Sakhalkar",
+  "license": "ISC"
 }
