--- a/proshop/package.json
+++ b/proshop/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "react-router-dom": "^5.3.0"
   },
@@ -7,9 +8,17 @@
   "version": "1.0.0",
   "description": "MERN shopping card app",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "start": "node backend/server"
+    "start": "node backend/server",
+    "server": "nodemon backend/server",
+    "client": "npm start --prefix frontend",
+    "dev": "concurrently \"npm run server\" \" npm run client\""
   },
   "author": "Abhijeet Sakhalkar",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^7.0.0",
+    "nodemon": "^2.0.15"
+  }
 }
