--- a/proshop/.env
+++ b/proshop/.env
@@ -1,2 +1,3 @@
 NODE_ENV = development
 PORT = 8000
+MONGO_URI = mongodb+srv://abhijeet1305:Password%40312358@cluster0.xflqc.mongodb.net/proshop?retryWrites=true&w=majority
