--- a/proshop/package.json
+++ b/proshop/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "colors": "^1.4.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "mongoose": "^6.2.8",
     "react-router-dom": "^5.3.0"
   },
   "name": "proshop",
@@ -13,7 +16,9 @@
     "start": "node backend/server",
     "server": "nodemon backend/server",
     "client": "npm start --prefix frontend",
-    "dev": "concurrently \"npm run server\" \" npm run client\""
+    "dev": "concurrently \"npm run server\" \" npm run client\"",
+    "data:import": "node backend/seeder",
+    "data:destroy": "node backend/seeder -d"
   },
   "author": "Abhijeet Sakhalkar",
   "license": "ISC",
