--- a/proshop/package.json
+++ b/proshop/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.8",
     "react-router-dom": "^5.3.0"
   },
