--- a/proshop/.env
+++ b/proshop/.env
@@ -2,3 +2,4 @@ NODE_ENV = development
 PORT = 8090
 MONGO_URI = mongodb+srv://abhijeet1305:Password%40312358@cluster0.xflqc.mongodb.net/proshop?retryWrites=true&w=majority
 JWT_SECRET = abc123
+PAYPAL_CLIENT_ID=Ad_AZiSG5GonMB-nIs6eA1do2nN7cP3h-5-RovPLki0wiD6wp8QOZU_p3q9SRiVDSfOoSyfID1RlZv4t
